2005-11-16  Tim-Philipp Müller  <tim at centricular dot net>

	* src/uri.c: (field_escape):
	  Fix URI escaping for characters from 0x80-0xff.

2005-11-15  Tim-Philipp Müller  <tim at centricular dot net>

	* NEWS:
	* configure.ac:
	* doc/gnet-sections.txt:
	* gnet.def:
	  Update for API addition.

2005-11-15  Jeff Garzik  <jgarzik@pobox.com>

	* src/conn.c: (conn_write_free), (gnet_conn_disconnect),
	(gnet_conn_write_direct), (gnet_conn_write), (conn_write_async_cb):
	* src/conn.h:
	  Add gnet_conn_write_direct(), to allow the caller to
	  control the write buffer.

2005-10-27  Tim-Philipp Müller  <tim at centricular dot net>

	* src/pack.h:
	* src/scheduler.h:
	  Add extern "C" bits for c++ compiler.

2005-09-19  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	* src/gnet-private.h:
	  Check if system provides socklen_t; if not
	  define it to be size_t or int as required.
	  
	* gnetconfig.h.win32:
	  Bump version numbers to 2.0.8

2005-09-19  Tim-Philipp Müller  <tim at centricular dot net>

	* examples/echoclient-unix.c:
	* examples/echoserver-unix.c:
	  Relicense these to LGPL as well (I missed Marks approval,
	  see below, same message).

	* NEWS:
	  update

2005-09-19  Tim-Philipp Müller  <tim at centricular dot net>

	* examples/dnslookup.c:
	* examples/echoclient-async.c:
	* examples/echoclient-gconn.c:
	* examples/echoclient-udp.c:
	* examples/echoclient.c:
	* examples/echoserver-async.c:
	* examples/echoserver-gserver.c:
	* examples/echoserver-partyline.c: (ob_sig_int):
	* examples/echoserver-udp.c:
	* examples/echoserver.c:
	* examples/hash.c:
	* examples/hfetch.c:
	* examples/hostinfo.c:
	* examples/sdr.c:
	  Relicense these examples from GPL to LGPL (as approved by the
	  copyright holder, David Helder, on the gnet mailing list,
	  Message ID: <f688e4613fd4e6bd85847dca4a4f60f3@gizmolabs.org>).

2005-09-19  Steve Morris  <steve_morris at arcadyan dot com>

	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>
